--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,23 @@
 logging.level.org.springframework=info
 management.endpoints.web.exposure.include=*
-spring.datasource.url= jdbc:h2:mem:test_db
+
+
 spring.jpa.defer-datasource-initialization= true
 spring.jpa.show-sql=true
+#//////////////////////////////////////
+spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
+spring.datasource.username=root
+spring.datasource.password=root
+
+#####################
+spring.security.user.name=username
+spring.security.user.password=password
+#####################
+
+# Hibernate
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
